--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx tsc",
+    "start": "node dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/DaNiMarTmArq/rutinator-backend/issues"
   },
-  "homepage": "https://github.com/DaNiMarTmArq/rutinator-backend#readme"
+  "homepage": "https://github.com/DaNiMarTmArq/rutinator-backend#readme",
+  "devDependencies": {
+    "typescript": "^5.8.3"
+  }
 }
