--- a/package.json
+++ b/package.json
@@ -20,11 +20,17 @@
   },
   "homepage": "https://github.com/DaNiMarTmArq/rutinator-backend#readme",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.20",
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@types/express": "^5.0.2",
+    "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1"
   }
 }
