--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@types/express": "^5.0.2",
+    "@types/express": "^5.0.3",
+    "@types/multer": "^1.4.13",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mime": "^4.0.7",
+    "multer": "^2.0.1",
     "mysql2": "^3.14.1",
     "zod": "^3.25.30"
   }
