--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/cors": "^2.8.18",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.20",
+    "@types/pdfkit": "^0.14.0",
     "typescript": "^5.8.3"
   },
   "dependencies": {
@@ -38,6 +39,7 @@
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
     "openai": "^5.6.0",
+    "pdfkit": "^0.17.1",
     "zod": "^3.25.30"
   }
 }
